--- a/.github/workflows/workflow-dev.yml
+++ b/.github/workflows/workflow-dev.yml
@@ -8,12 +8,13 @@ on:
 
 jobs:
   build:
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
-    - use: action/checkout@v2
+    - uses: actions/checkout@v2
     - name: Setup jdk 17
       uses: actions/setup-java@v2
       with:
         java-version: '17'
+        distribution: 'adopt'
     - name: Build with maven
       run: mvn -B package --file pom.xml
